--- a/src/MessageSilo.API/MessageSilo.API.csproj
+++ b/src/MessageSilo.API/MessageSilo.API.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Orleans.Client" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="3.6.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
