--- a/src/MessageSilo.Shared/MessageSilo.Shared.csproj
+++ b/src/MessageSilo.Shared/MessageSilo.Shared.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="InfluxDB.Client" Version="4.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.6.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
