test silo ACA deploy

--- a/src/MessageSilo.Silo/MessageSilo.Silo.csproj
+++ b/src/MessageSilo.Silo/MessageSilo.Silo.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>9499a9c8-d0ef-44f8-8a96-4e22f8256f93</UserSecretsId>
+    <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
   </PropertyGroup>
   
   <ItemGroup>
