--- a/src/MessageSilo.Silo/Properties/launchSettings.json
+++ b/src/MessageSilo.Silo/Properties/launchSettings.json
@@ -2,12 +2,17 @@
   "profiles": {
     "MessageSilo.Silo": {
       "commandName": "Project",
-      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
