--- a/.github/workflows/message-silo-prd-ca-silo.yml
+++ b/.github/workflows/message-silo-prd-ca-silo.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         push: true
         tags: ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.PROJECT_NAME_FOR_DOCKER }}:1.0.${{github.run_number}}
-        file: Silo/Dockerfile 
+        file: src/MessageSilo.Silo/Dockerfile 
 
   deploy:
     runs-on: ubuntu-latest
