--- a/.github/workflows/message-silo-prd-ca-silo.yml
+++ b/.github/workflows/message-silo-prd-ca-silo.yml
@@ -11,6 +11,7 @@ env:
   PROJECT_NAME_FOR_DOCKER: messagesilo.silo
 jobs:
   build:
+    environment: prd
     runs-on: ubuntu-latest
     steps:
     - name: Checkout to the branch
@@ -50,6 +51,7 @@ jobs:
         file: src/MessageSilo.Silo/Dockerfile 
 
   deploy:
+    environment: prd
     runs-on: ubuntu-latest
     needs: build
     steps:
