--- a/.github/workflows/message-silo-prd-ca-silo.yml
+++ b/.github/workflows/message-silo-prd-ca-silo.yml
@@ -30,14 +30,14 @@ jobs:
       env:
         ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
         ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
-        
-    - name: Build
-      working-directory: ./src/MessageSilo.Silo
-      run: dotnet build
+      
+    - name: Display config
+      run: >
+        echo "${{ secrets.CONNECTIONSTRINGS_AI }}"
+        cat ./src/MessageSilo.Silo/appsettings.json
 
     - name: Publish
-      working-directory: ./src/MessageSilo.Silo
-      run: dotnet publish -c Release
+      run: dotnet publish ./src/MessageSilo.Silo/MessageSilo.Silo.csproj --configuration Release
 
     - name: Log in to container registry
       uses: azure/docker-login@v1
