--- a/src/MessageSilo.Silo/Dockerfile
+++ b/src/MessageSilo.Silo/Dockerfile
@@ -18,7 +18,7 @@ WORKDIR "/src/src/MessageSilo.Silo"
 RUN dotnet build "MessageSilo.Silo.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "MessageSilo.Silo.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "MessageSilo.Silo.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
