--- a/.github/workflows/message-silo-prd-ca-silo.yml
+++ b/.github/workflows/message-silo-prd-ca-silo.yml
@@ -30,11 +30,9 @@ jobs:
       env:
         ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
         ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
-      
-    - name: Display config
-      run: >
-        echo "${{ secrets.CONNECTIONSTRINGS_AI }}"
-        cat ./src/MessageSilo.Silo/appsettings.json
+
+    - name: Display
+      run: echo ${{ secrets.CONNECTIONSTRINGS_AI }}
 
     - name: Publish
       run: dotnet publish ./src/MessageSilo.Silo/MessageSilo.Silo.csproj --configuration Release
