--- a/.github/workflows/message-silo-prd-ca-silo.yml
+++ b/.github/workflows/message-silo-prd-ca-silo.yml
@@ -31,8 +31,10 @@ jobs:
         ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
         ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
 
-    - name: Display
-      run: echo "${{ secrets.CONNECTIONSTRINGS_AI }}"
+    - run: 'echo "$SSH_KEY" > key'
+      shell: bash
+      env:
+        SSH_KEY: ${{secrets.CONNECTIONSTRINGS_AI}}
 
     - name: Publish
       run: dotnet publish ./src/MessageSilo.Silo/MessageSilo.Silo.csproj --configuration Release
