--- a/.github/workflows/message-silo-prd-ca-silo.yml
+++ b/.github/workflows/message-silo-prd-ca-silo.yml
@@ -31,11 +31,6 @@ jobs:
         ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
         ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
 
-    - run: 'echo "$SSH_KEY" > key'
-      shell: bash
-      env:
-        SSH_KEY: ${{secrets.CONNECTIONSTRINGS_AI}}
-
     - name: Publish
       run: dotnet publish ./src/MessageSilo.Silo/MessageSilo.Silo.csproj --configuration Release
 
@@ -74,7 +69,7 @@ jobs:
 
           az containerapp registry set --name ${{ env.CONTAINER_APP_NAME }} --resource-group ${{ env.CONTAINER_APP_RESOURCE_GROUP_NAME }} --server ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }} --username ${{ secrets.ACR_USER }} --password ${{ secrets.ACR_PASS }}
 
-          az containerapp update --name ${{ env.CONTAINER_APP_NAME }} --container-name ${{ env.CONTAINER_APP_CONTAINER_NAME }} --resource-group ${{ env.CONTAINER_APP_RESOURCE_GROUP_NAME }} --image ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.PROJECT_NAME_FOR_DOCKER }}:1.0.${{github.run_number}}
+          az containerapp update --name ${{ env.CONTAINER_APP_NAME }} --container-name ${{ env.CONTAINER_APP_CONTAINER_NAME }} --resource-group ${{ env.CONTAINER_APP_RESOURCE_GROUP_NAME }} --image ${{ env.CONTAINER_REGISTRY_LOGIN_SERVER }}/${{ env.PROJECT_NAME_FOR_DOCKER }}:1.0.${{github.run_number}} --set-env-vars="ConnectionStrings.AI=${{ secrets.CONNECTIONSTRINGS_AI }} ConnectionStrings.GrainStateStorage=${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}"
 
     - name: logout
       run: >
