--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -33,6 +33,7 @@
     "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
   },
   "Orleans": {
-    "PrimarySiloAddress": "127.0.0.1"
+    "PrimarySiloAddress": "127.0.0.1",
+    "StateUnlockerKey": "$(Orleans.StateUnlockerKey)"
   }
 }
