--- a/src/MessageSilo.Shared/MessageSilo.Shared.csproj
+++ b/src/MessageSilo.Shared/MessageSilo.Shared.csproj
@@ -9,7 +9,6 @@
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
-    <PackageReference Include="InfluxDB.Client" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.6.5">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.6.5" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="YamlDotNet" Version="13.0.2" />
   </ItemGroup>
 
