AI enricher added

--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -35,5 +35,8 @@
   "Orleans": {
     "PrimarySiloAddress": "127.0.0.1",
     "StateUnlockerKey": "$(Orleans.StateUnlockerKey)"
+  },
+  "AI": {
+    "ApiKey": "$(AI.ApiKey)"
   }
 }
