--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -28,6 +28,7 @@ jobs:
           ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
           ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
           Orleans.StateUnlockerKey: ${{ secrets.ORLEANS_STATEUNLOCKERKEY }}
+          AI.ApiKey: ${{ secrets.AI_APIKEY }}
 
       - name: Build
         working-directory: ./src/MessageSilo.Silo
