--- a/MessageSilo.App/MessageSilo.App/MessageSilo.App.csproj
+++ b/MessageSilo.App/MessageSilo.App/MessageSilo.App.csproj
@@ -15,6 +15,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.*" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.*" PrivateAssets="all" />
 	</ItemGroup>
