--- a/MessageSilo.App/MessageSilo.App/MessageSilo.App.csproj
+++ b/MessageSilo.App/MessageSilo.App/MessageSilo.App.csproj
@@ -31,4 +31,13 @@
 	  <ProjectReference Include="..\..\src\MessageSilo.Features\MessageSilo.Features.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="wwwroot\appsettings.Development.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	  <Content Update="wwwroot\appsettings.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
