refactor configurations, user manager added

--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -33,10 +33,7 @@
     "Domain": "https://message-silo.eu.auth0.com",
     "Audience": "https://api.message-silo.dev"
   },
-  "ConnectionStrings": {
-    "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
-  },
-  "Orleans": {
-    "PrimarySiloAddress": "127.0.0.1"
+  "Silo": {
+    "PrimaryAddress": "127.0.0.1"
   }
 }
