--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -29,12 +29,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
-  },
-  "Orleans": {
-    "PrimarySiloAddress": "127.0.0.1",
-    "StateUnlockerKey": "$(Orleans.StateUnlockerKey)"
+  "Silo": {
+    "PrimaryAddress": "127.0.0.1",
+    "StateUnlockerKey": "$(Silo.StateUnlockerKey)",
+    "DatabaseConnectionString": "$(Silo.DatabaseConnectionString)",
+    "DatabaseName": "$(Silo.DatabaseName)"
   },
   "AI": {
     "ApiKey": "$(AI.ApiKey)"
