--- a/src/MessageSilo.Silo/MessageSilo.Silo.csproj
+++ b/src/MessageSilo.Silo/MessageSilo.Silo.csproj
@@ -15,7 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="3.6.5" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Orleans.Providers.MongoDB" Version="3.8.0" />
     <PackageReference Include="OrleansDashboard" Version="3.6.2" />
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
