--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -11,18 +11,6 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "ApplicationInsights",
-        "Args": {
-          "connectionString": "$(ConnectionStrings.AI)",
-          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
-        }
-      }
-    ],
     "Enrich": [ "FromLogContext" ],
     "Properties": {
       "Application": "Message Silo - API"
@@ -33,7 +21,6 @@
     "Domain": "https://message-silo.eu.auth0.com",
     "Audience": "https://api.message-silo.dev"
   },
-  "Silo": {
-    "PrimaryAddress": "127.0.0.1"
-  }
+  "PrimarySiloAddress": "$(PrimarySiloAddress)",
+  "AppInsightsConnectionString": "$(AppInsightsConnectionString)"
 }
