--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -29,13 +29,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Silo": {
-    "PrimaryAddress": "127.0.0.1",
-    "StateUnlockerKey": "$(Silo.StateUnlockerKey)",
-    "DatabaseConnectionString": "$(Silo.DatabaseConnectionString)",
-    "DatabaseName": "$(Silo.DatabaseName)"
-  },
-  "AI": {
-    "ApiKey": "$(AI.ApiKey)"
-  }
+  "PrimarySiloAddress": "$(PrimarySiloAddress)",
+  "StateUnlockerKey": "$(StateUnlockerKey)",
+  "DatabaseConnectionString": "$(DatabaseConnectionString)",
+  "DatabaseName": "$(DatabaseName)",
+  "AppInsightsConnectionString": "$(AppInsightsConnectionString)",
+  "AIApiKey": "$(AI.ApiKey)"
 }
