--- a/src/MessageSilo.API/MessageSilo.API.csproj
+++ b/src/MessageSilo.API/MessageSilo.API.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Microsoft.Orleans.Client" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="3.6.5" />
+    <PackageReference Include="Polly" Version="7.2.4" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
   </ItemGroup>
