--- a/src/MessageSilo.API/Properties/launchSettings.json
+++ b/src/MessageSilo.API/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5000"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
