--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -25,8 +25,7 @@ jobs:
           tokenSuffix: ')'
           files: '["**/appsettings.json"]'
         env:
-          ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
-          ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
+          AppInsightsConnectionString: ${{ secrets.CONNECTIONSTRINGS_AI }}
 
       - name: Build
         working-directory: ./src/MessageSilo.API
