--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -25,10 +25,11 @@ jobs:
           tokenSuffix: ')'
           files: '["**/appsettings.json"]'
         env:
-          ConnectionStrings.AI: ${{ secrets.CONNECTIONSTRINGS_AI }}
-          ConnectionStrings.GrainStateStorage: ${{ secrets.CONNECTIONSTRINGS_GRAINSTATESTORAGE }}
-          Orleans.StateUnlockerKey: ${{ secrets.ORLEANS_STATEUNLOCKERKEY }}
-          AI.ApiKey: ${{ secrets.AI_APIKEY }}
+          StateUnlockerKey: ${{ secrets.ORLEANS_STATEUNLOCKERKEY }}
+          DatabaseConnectionString: ${{ secrets.DATABASECONNECTIONSTRING }}
+          DatabaseName: messagesilo-prd
+          AIApiKey: ${{ secrets.AI_APIKEY }}
+          AppInsightsConnectionString: ${{ secrets.CONNECTIONSTRINGS_AI }}
 
       - name: Build
         working-directory: ./src/MessageSilo.Silo
