--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -25,6 +25,7 @@ jobs:
           tokenSuffix: ')'
           files: '["**/appsettings.json"]'
         env:
+          PrimarySiloAddress: 127.0.0.1
           StateUnlockerKey: ${{ secrets.ORLEANS_STATEUNLOCKERKEY }}
           DatabaseConnectionString: ${{ secrets.DATABASECONNECTIONSTRING }}
           DatabaseName: messagesilo-prd
