--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -50,8 +50,16 @@ jobs:
           local: /home/runner/work/MessageSilo/publish
           remote: /home/temp/silo
 
-#      - name: Upload build artifact
-#        uses: actions/upload-artifact@v3.1.2
-#        with:
-#          name: message-silo-silo-latest
-#          path: "/home/runner/work/MessageSilo/publish/*"
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: src/MessageSilo.Silo/Dockerfile
+          push: true
+          tags: "berkid89/messagesilo-silo:latest"
