--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -45,3 +45,18 @@ jobs:
           port: ${{ secrets.PORT }}
           local: /home/runner/work/MessageSilo/publish
           remote: /home/temp/api
+
+          
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: src/MessageSilo.API/Dockerfile
+          push: true
+          tags: "berkid89/messagesilo-api:latest"
