minor fix in settings

--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -22,5 +22,5 @@
   "DatabaseConnectionString": "$(DatabaseConnectionString)",
   "DatabaseName": "$(DatabaseName)",
   "AppInsightsConnectionString": "$(AppInsightsConnectionString)",
-  "AIApiKey": "$(AI.ApiKey)"
+  "AIApiKey": "$(AIApiKey)"
 }
