upgrade to .net7 WIP

--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ __pycache__/
 /src/MessageSilo.API/appsettings.Development.json
 /src/MessageSilo.Silo/appsettings.Development.json
 /src/MessageSilo.SiloCTL/Properties/PublishProfiles/FolderProfile.pubxml
+/src/MessageSilo/appsettings.Development.json
