--- a/compose.yaml
+++ b/compose.yaml
@@ -1,55 +1,22 @@
 version: '3.8'
 
 services:
-  app:
-    image: messagesilo/app
-    ports:
-      - "3000:80"
-    build:
-      context: .
-      dockerfile: src/MessageSilo.App/Dockerfile
-    depends_on:
-      - api
-    networks:
-      network:
-        ipv4_address: 10.5.0.5
-
-  api:
-    image: messagesilo/api
+  messagesilo:
+    image: messagesilo
     ports:
       - "5000:80"
     environment:
-      PrimarySiloAddress: "10.5.0.3"
-      AppInsightsConnectionString: ""
-    build:
-      context: .
-      dockerfile: src/MessageSilo.API/Dockerfile
-    depends_on:
-      - silo
-    networks:
-      network:
-        ipv4_address: 10.5.0.4
-
-  silo:
-    image: messagesilo/silo
-    ports:
-      - "11111:11111"
-      - "30000:30000"
-    environment:
-      PrimarySiloAddress: "10.5.0.3"
+      PrimarySiloAddress: "127.0.0.1"
       StateUnlockerKey: "test"
-      DatabaseConnectionString: "mongodb://10.5.0.2:27017"
+      DatabaseConnectionString: "mongodb://database:27017"
       DatabaseName: "messagesilo-local"
       AIApiKey: ""
       AppInsightsConnectionString: ""
     build:
       context: .
-      dockerfile: src/MessageSilo.Silo/Dockerfile
+      dockerfile: src/MessageSilo/Dockerfile
     depends_on:
       - database
-    networks:
-      network:
-        ipv4_address: 10.5.0.3
 
   database:
     image: mongo:6-jammy
@@ -57,14 +24,3 @@ services:
       - "27017:27017"
     volumes: 
       - ~/mongo/data:/data/db
-    networks:
-      network:
-        ipv4_address: 10.5.0.2
-
-networks:
-  network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 10.5.0.0/16
-          gateway: 10.5.0.1
