--- a/.github/workflows/message-silo.yml
+++ b/.github/workflows/message-silo.yml
@@ -50,6 +50,6 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: src/MessageSilo.Silo/Dockerfile
+          file: src/MessageSilo/Dockerfile
           push: true
           tags: "berkid89/messagesilo:latest"
