--- a/.github/workflows/message-silo.yml
+++ b/.github/workflows/message-silo.yml
@@ -54,6 +54,11 @@ jobs:
           push: true
           tags: "berkid89/messagesilo:latest"
 
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS_O }}
+
       - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
         with:
