--- a/.github/workflows/message-silo.yml
+++ b/.github/workflows/message-silo.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS_O }}
+          creds: ${{ secrets.AZURE_CREDENTIALS_S }}
 
       - name: 'Deploy to Azure Container Instances'
         uses: 'azure/aci-deploy@v1'
