--- a/.github/workflows/message-silo-build.yml
+++ b/.github/workflows/message-silo-build.yml
@@ -38,4 +38,4 @@ jobs:
           context: .
           file: src/MessageSilo/Dockerfile
           push: true
-          tags: "berkid89/messagesilo:latest"
+          tags: "${{ secrets.DOCKERHUB_USERNAME }}/messagesilo:latest,${{ secrets.DOCKERHUB_USERNAME }}/messagesilo:1.1.${{ github.run_number }}"
