--- a/src/MessageSilo.Features/MessageSilo.Features.csproj
+++ b/src/MessageSilo.Features/MessageSilo.Features.csproj
@@ -10,13 +10,13 @@
     <PackageReference Include="AWSSDK.SQS" Version="3.7.300.7" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.0" />
     <PackageReference Include="Betalgo.OpenAI" Version="7.4.1" />
-    <PackageReference Include="Jint" Version="3.0.0-beta-2042" />
-    <PackageReference Include="Microsoft.Orleans.Server" Version="7.2.3" />
-    <PackageReference Include="Polly.Core" Version="8.2.0" />
+    <PackageReference Include="Polly.Core" Version="8.4.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MessageSilo.Domain\MessageSilo.Domain.csproj" />
+    <ProjectReference Include="..\MessageSilo.Infrastructure\MessageSilo.Infrastructure.csproj" />
     <ProjectReference Include="..\MessageSilo.Shared\MessageSilo.Shared.csproj" />
   </ItemGroup>
 
