--- a/src/MessageSilo.Application/MessageSilo.Application.csproj
+++ b/src/MessageSilo.Application/MessageSilo.Application.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessageSilo.Domain\MessageSilo.Domain.csproj" />
   </ItemGroup>
 
 </Project>
