--- a/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
+++ b/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
@@ -20,7 +20,9 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="ConsoleTables" Version="2.6.1" />
-    <PackageReference Include="Microsoft.Net.Http.Headers" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Net.Http.Headers" Version="8.0.8" />
+    <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
