using: OpenAI.Chat package & KeepAlive attrib

--- a/src/MessageSilo.Infrastructure/MessageSilo.Infrastructure.csproj
+++ b/src/MessageSilo.Infrastructure/MessageSilo.Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.1" />
     <PackageReference Include="Microsoft.Orleans.Serialization.NewtonsoftJson" Version="8.2.0" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="8.2.0" />
+    <PackageReference Include="OpenAI" Version="2.0.0-beta.8" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="YamlDotNet" Version="16.0.0" />
   </ItemGroup>
