--- a/src/MessageSilo/MessageSilo.csproj
+++ b/src/MessageSilo/MessageSilo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.8" />
     <PackageReference Include="Microsoft.Orleans.Serialization.SystemTextJson" Version="7.2.3" />
     <PackageReference Include="Orleans.Providers.MongoDB" Version="7.6.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MessageSilo.Application\MessageSilo.Application.csproj" />
+    <ProjectReference Include="..\MessageSilo.Client\MessageSilo.Client.csproj" />
     <ProjectReference Include="..\MessageSilo.Infrastructure\MessageSilo.Infrastructure.csproj" />
   </ItemGroup>
 
