--- a/src/MessageSilo.Client/MessageSilo.Client.csproj
+++ b/src/MessageSilo.Client/MessageSilo.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.8" PrivateAssets="all" />
+    <PackageReference Include="Z.Blazor.Diagrams" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
