--- a/src/MessageSilo.Client/MessageSilo.Client.csproj
+++ b/src/MessageSilo.Client/MessageSilo.Client.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\MessageSilo.Infrastructure\MessageSilo.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\bootstrap\" />
+  </ItemGroup>
+
 </Project>
